# rusty

./: RUSTY_PRD.docx
forge-runner/: Cargo.toml
forge-runner/src/: cli.rs  lib.rs  main.rs
forge-runner/src/application/: dto.rs  mod.rs  scaffold.rs
forge-runner/src/domain/: models.rs  ports.rs  services.rs
forge-runner/src/infrastructure/: command_runner.rs  fs_ops.rs  mod.rs  template_engine.rs  yaml_loader.rs
forge-runner/src/output/: display.rs
forge-runner/templates/react-fastapi/: forge.yaml
forge-runner/templates/react-fastapi/backend/: main.py.hbs
forge-runner/templates/react-fastapi/frontend/: package.json.hbs
forge-runner/tests/: manifest_tests.rs  service_tests.rs
forge-runner/tests/fixtures/: invalid_forge.yaml  valid_forge.yaml
forge-runner/tests/fixtures/templates/: greeting.txt.hbs
mcp-labs/: Cargo.toml
mcp-labs/data/: labs.toml
mcp-labs/src/: lib.rs  main.rs
mcp-labs/src/application/: mod.rs  tool_dispatch.rs
mcp-labs/src/domain/: models.rs  ports.rs  services.rs
mcp-labs/src/infrastructure/: mod.rs  process_runner.rs  (+2 more)
mcp-labs/tests/: protocol_tests.rs  tool_tests.rs
stacklens-cli/: Cargo.toml
stacklens-cli/data/: fingerprints.json
stacklens-cli/src/: cli.rs  main.rs
stacklens-cli/src/application/: detect.rs  dto.rs  mod.rs
stacklens-cli/src/domain/: models.rs  ports.rs  services.rs
stacklens-cli/src/infrastructure/: fingerprint_store.rs  html_parser.rs  http_client.rs  mod.rs
stacklens-cli/src/output/: json.rs  table.rs
stacklens-cli/tests/: domain_tests.rs
stacklens-cli/tests/fixtures/: sample.html
(+10 files in other folders)
