[package]
name = "forge-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
handlebars = "6"
anyhow = "1"
indicatif = "0.17"
console = "0.15"
