[package]
name = "stacklens-cli"
version = "0.1.0"
edition = "2021"
description = "Detect technologies used by websites"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.22"
anyhow = "1"
prettytable-rs = "0.10"
regex = "1"
